# aging_shader

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/core/: camera.hpp  image_loader.hpp  physics.cpp  physics.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  scene_object.cpp  scene_object.hpp
src/shaders/: quad.frag  quad.vert  raytracer.comp
src/shaders/common/: constants.glsl  noise.glsl  structures.glsl  uniforms.glsl  utils.glsl
src/shaders/intersect/: primitives.glsl  ray.glsl
src/shaders/materials/: brdf.glsl  material_library.glsl
